crates/oxc_css_parser/tests/error/scss/at-rule/forward/as-no-asterisk.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `*`, but found `;`
  ┌─ as-no-asterisk.scss:1:20
  │
1 │ @forward "a" as foo;
  │                    ^


